# oh-my-copilot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.dev  LICENSE  README.md  README_NOTIFICATIONS.md  README_vi.md  README_zh.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.github/: copilot-instructions.md
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  codeql-analysis.yml
.omc/hooks/: omc-copilot-hooks.json
.omc/state/: omc-copilot-history.jsonl
docs/: NOTIFICATIONS.md
examples/: sample_task_rest_api.json
omc_copilot/: __init__.py  notifications.py
omc_copilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
omc_copilot/adapters/: codex_cli.py  copilot_cli.py  js_bridge.py  runtime_base.py  runtime_factory.py
omc_copilot/agents/: architect.py  base.py  executor.py  fixer.py  planner.py  registry.py  reviewer.py  tester.py
omc_copilot/cli/: main.py  notify.py
omc_copilot/compatibility/: __init__.py  command_map.py  hook_registry.py  keyword_router.py  parity_inventory.py  pipeline_registry.py  session_method_map.json  skill_loader.py
omc_copilot/execution/: __init__.py  command_runner.py  copilot_wrapper.py
scripts/: setup_node_adapter.sh
tests/: test_autopilot_loop.py  test_codex_cli.py  test_codex_skill_installer.py  test_doctor_command.py  test_hook_dispatcher.py  test_hook_installer.py  test_js_bridge.py  test_js_bridge_unit.py  test_merge_strategy.py  test_notifications.py  test_pipeline_parity.py  test_plugin_validation.py  test_runtime_factory.py  test_setup_command.py  test_skill_loader.py  test_state_manager.py  test_uninstall_command.py
(+88 files in other folders)
