[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omc-copilot"
version = "0.1.4"
description = "OMC-style multi-agent orchestration framework powered by GitHub Copilot CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "oh-my-copilot" }]
dependencies = ["httpx>=0.24.0"]

[project.scripts]
omc-copilot = "omc_copilot.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["omc_copilot*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
omc_copilot = [
  "templates/*",
  "templates/instructions/*",
  "templates/codex-skills/*/SKILL.md",
  "templates/codex-skills/*/*",
  "templates/codex-skills/*/*/*",
]

[project.optional-dependencies]
# Development / test tooling
dev = [
  "pytest>=7.0",
  "respx>=0.20.0",
  "black>=23.3.0",
  "flake8>=5.0.4",
  "isort>=5.12.0",
  "mypy>=1.3.0",
  "pre-commit>=3.4.0",
]
